# test

./: .gitignore  env  git-config.py  readme
boost/: readme.md
c/huo/: main.cpp
c/macro-scope/: main.cpp
cmake/: CMakeLists.txt  main.cpp  result.txt
cmake/project-config-file/: build.py  result.txt
cxx11/bind/: main.cpp
cxx11/enum/: enum-as-return-value.cpp
cxx11/macro/macro_conflict/: a.cpp  test2.hpp
cxx11/pair_insert_map/: a.cpp  result.txt
cxx11/shared_ptr_copy/: core  main.cpp
l/c/macro-scope/: result.txt
l/cxx/test/RValue-refrence/: usage.cpp
l/cxx/test/compare-weak-shared-ptr/: a.cpp
l/cxx/test/enum/: readme.md
l/cxx/test/erase-in-loop/: a.cpp
l/cxx/test/if/: if.cpp
l/cxx/test/lamda/: readme  usage.cpp
l/cxx/test/pointer-const/: const_char_and_char_const.cpp
l/cxx/test/regex/: a.cpp  readme
l/cxx/test/sizeof/: sizeof.cpp
l/cxx/tutorial/exception/: standard_exception.cpp
l/cxx/tutorial/preprocessor/: macro.cpp
l/cxx/tutorial/type-converstion/: static_pointer_cast.cpp  type_id.cpp
l/go/: rule.md
l/go/book/build-web-app-with-go/: web.go
l/go/go-programing/: progress.md
l/go/go-programing/c02/: closure.go  error.go  map.go
l/go/go-programing/c03/: oop.go  struct.go
l/go/go-programing/c04/: add.go  channel.go  oneway-channel.go
l/go/test/channel/: buffered-channel.go  channel.go
l/go/test/gdb/: main.go
l/go/test/panic-recover/: main.go
l/go/test/reflect/: main.go
l/go/test/runtime/: main.go
l/go/test/select/: main.go  timeout-select.go
l/go/test/testing/: bench_test.go  gotest.go  gotest_test.go
l/javascript/: array.html  func.html  inherit.html  method.html  object.html
l/javascript/async-await/: .babelrc  index.js  package.json  readme.md
l/javascript/class-refrence/: index.js  package.json
l/javascript/deepcopy/: index.js  package.json
l/javascript/es6/: .babelrc  03-destructing.js  package.json  readme.md
l/javascript/es6/02-let-const/: index.js
l/javascript/es6/03-变量解构赋值/: index.js
l/javascript/extend-object/: index.js  package.json
l/javascript/promise/: index.js  package.json  reolve-return.js
l/javascript/regexp/: any-charator.js  group.js  index.js  package.json  regexp.html
l/javascript/travese-object-attribute/: traversal.html
l/javascript/url-encode-decode/: index.js
l/oj/leetcode/: create.py  index.md
l/oj/leetcode/0001/: solution.cpp
l/oj/leetcode/0002/: question.md  solution.cpp
l/oj/leetcode/0014/: solution.cpp
l/oj/leetcode/0049/: solution.cpp
l/oj/leetcode/0070/: question.md
l/oj/leetcode/0077/: question.md  solution.cpp
l/oj/leetcode/0094/: question.md
l/oj/leetcode/0166/: question.md  solution.cpp
l/oj/leetcode/0322/: question.md  solution.cpp
l/oj/real/amazon/: 01.md
l/oj/summary/binary-tree/: binary-search-tree.cpp  binary-tree.cpp  max-min-heap.cpp  readme.md
l/oj/summary/int_to_binary/: int_to_binary.cpp
l/oj/summary/sort/: quick_sort.cpp  readme.md
l/python/: argparser.py  echo.py  enum.py  list.py  list_and_in.py  platform.py  tuple.py
l/python/book/: list
l/python/book/c04/: built-in-types.py  m-random.py  m-re.py  t-dict.py  t-list.py  t-loop.py  t-set.py  t-string.py  t-tuple.py
l/python/doc2.7/: readme
l/python/popen/: echo.py  popen.py  server.py
l/python/test/: .gitignore  argparser.py  cpu_count.py  create-symlink.py  list_as_key_in_map.py  print_chinese.py  print_without_newline.py  read_file.py  string-join.py  sys_argv.py
l/python/tools/: PrintColor.py  a.h  c.py  find_deep_macro_if_in_cxx_include_h.py  print_chinese.py
l/shell/: a.sh
l/swift/urlsession-self-signed-cert-digest/: test.swift
language/c/macro-scope/: a.h  b.cpp  b.h
language/c/printf/: main.c
language/cxx/exception/: built_in_exception.cpp  result.txt  simple_exception.cpp
language/cxx/preprocessor/: error.cpp  pragma.cpp  predefinde_macros.cpp
language/cxx/type-converstion/: dynamic_cast.cpp  implicit_conversation.cpp  reinterpret_cast.cpp  static_cast.cpp
language/cxx/unordered_map/: a.cpp
language/shell/: result.txt
posix-linux/api/socket/: client.cpp  server.cpp
posix-linux/api/time/: time.cpp
posix-linux/command/netstat/: readme
posix-linux/pipe/: one-process.cpp
posix-linux/socket/: client.cpp
posix-linux/socket/normal_case/: server.cpp
posix-linux/socket/tcp_cache_when_close/: r.txt  server.cpp
posix/pipe/: one-process.cpp
posix/select/: client.cpp  server.cpp
posix/thread/: thread.cpp
script/python/: argparser.py  string.py
test/: test-cone.txt
tools/: flask-get-env-ngnix-uwsgi
tools/ab/: a.txt
tools/amazon/: readme.md
tools/cmake/: cmake_useful_variables.txt
tools/cmake/function/: CMakeLists.txt
tools/cmake/list/: CMakeLists.txt
tools/cmake/loop-func-list/: CMakeLists.txt
tools/cmake/matches/: CMakeLists.txt
tools/cmake/project-config-file/FooBar/foo/: CMakeLists.txt  foo.c  foo.h
tools/cmake/project-config-file/use-foobar/: CMakeLists.txt  main.c
tools/docker/: readme.md
tools/docker/entrypoint/: docker-compose.yml
tools/elk/: readme.md
tools/git/: hooks.md  osx-git-auto-prompt-auto-completion
tools/icecc-ccache/: readme.md
tools/info/: info
tools/info/ab/: .gitignore  post-with-ab.py
tools/info/git/: import-git-clean-files
tools/info/icecc-ccache/: info
tools/info/mysql/: failed-to-restart  info
tools/info/nginx/: info
tools/info/redis/: info
tools/info/shadowsocks+proxychains/: readme.md
tools/info/ubuntu/: desktop-issues
tools/install/: install_boost.py
tools/libs/: dcommon.py
tools/mogodb/: readme.md
tools/mongodb/: readme.md
tools/nginx/: example.conf  readme.md
tools/npm-nvm-nrm-node/: readme.md
tools/python-tools/: pip  readme.md
tools/rabbitmq/: readme.md
tools/redis/: docker-compose.yml  readme.md  redis-config.md
tools/shadowsocks+proxychains/: git-proxy.md  osx-change-socks5-to-http-proxy.md  readme.md  shadowsocks.md
tools/sublime/: readme
tools/switchysharp/: OmegaOptions.bak  readme.md
tools/ubuntu/: disable-root-account-and-use-new.md
tools/uwsgi/: readme.md  uwsgi.ini
w/: getting-started
(+297 files in other folders)
